created route - add game match
